# InternVideo

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  README_cn.md  reqs.txt
InternVideo2/multi_modality/: .gitignore  B14 Testing.ipynb  DATASET.md  DEMO_USAGE_GUIDE.md  Demo Usage Guide.md  INSTALL.md  MODEL_ZOO.md  README.md  ViCLIP.ipynb  demo.ipynb  demo_config.py  demo_video_text_retrieval.ipynb  pyproject.toml  requirements.txt  torchrun.sh
InternVideo2/multi_modality/configs/: data.py  med_config.json  med_config_fusion.json  med_large_config.json  model.py
InternVideo2/multi_modality/dataset/: __init__.py  av_utils.py  base_dataset.py  dataloader.py  pt_dataset.py  qa_dataset.py  resample_concat_dataset.py  ret_dataset.py  sampler.py  utils.py  video_utils.py
InternVideo2/multi_modality/demo/: __init__.py  config.py  demo.ipynb  internvideo2_stage2_config.py  utils.py
InternVideo2/multi_modality/miscs/: test_flops.py
InternVideo2/multi_modality/models/: __init__.py  criterions.py  dist_utils.py  internvideo2_clip.py  internvideo2_clip_small.py  internvideo2_stage2.py  internvideo2_stage2_audiovisual.py  internvideo2_stage2_visual.py  mask.py  utils.py
InternVideo2/multi_modality/models/backbones/beats/: BEATs.py  backbone.py  test.py
InternVideo2/multi_modality/models/backbones/bert/: builder.py  med.py  xbert.py
InternVideo2/multi_modality/models/backbones/internvideo2/: __init__.py  flash_attention_class.py  internvideo2.py  internvideo2_clip_text.py  internvideo2_clip_vision.py  internvl_clip_vision.py  pos_embed.py
InternVideo2/multi_modality/models/backbones/internvideo2/mobileclip/: __init__.py  text_encoder.py  tokenizer.py  transformer.py
InternVideo2/multi_modality/preprocess/: create_sqlite_db.py
InternVideo2/multi_modality/scripts/pretraining/clip/1B/: config.py  run.sh
InternVideo2/multi_modality/scripts/pretraining/clip/6B/: config.py  run.sh
InternVideo2/multi_modality/scripts/pretraining/clip/B14/: config.py  run.sh
InternVideo2/multi_modality/scripts/pretraining/clip/L14/: config.py  run.sh
InternVideo2/multi_modality/scripts/pretraining/clip/S14/: config.py  (+1 more)
InternVideo2/multi_modality/tasks/: pretrain.py  retrieval_utils.py  shared_utils.py
InternVideo2/multi_modality/tasks_clip/: pretrain.py  retrieval.py  retrieval_mc.py  retrieval_mc2.py  retrieval_utils.py  shared_utils.py
InternVideo2/multi_modality/utils/: config_utils.py  distributed.py  optimizer.py  scheduler.py
(+1622 files in other folders)
